# salary-calc-uk

./: .gitignore  .gitmessage  .renovaterc.json5  AGENTS.md  README.md  main.py  pyproject.toml  salary.nb.py
.config/: lefthook.toml
.config/lefthook/commit-msg/: conventional-commit.sh
.github/: renovate.json
.github/workflows/: codeql.yml  lint.yml  marimo-pages.yml
