[project]
name = "salary-calc-uk"
version = "0.1.0"
description = "Exploring Marimo notebooks to calcuulate UK salary after tax and NI contributions."
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "marimo[recommended]>=0.19.11",

    # plotting and data manipulation
    "altair>=6.0.0",
    "polars>=1.38.1",
]

[dependency-groups]
dev = [
    # dev tool
    "lefthook>=2.0.15",
    # linting and formatting
    "deptry>=0.24.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Rules managed by the formatter
    "COM812",
    "E501",
    # Incompatible with existing rules
    "D203",
    "D212",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"*.nb.py" = [
    # marimo cell functions intentionally break typical module/function conventions
    "ANN001",
    "ANN202",
    "C901",
    "D100",
    "N803",
    "N806",
    "PLC0415",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1711",
]

[tool.ty.rules]
all = "error"

# [tool.uv]
# # compiling bytecode adds significant overhead during pre-commit hooks, we
# # should only enable it where necessary
# compile-bytecode = false
